# LawGPT

./: .gitignore  README.md
app/: Dockerfile  Makefile  TODO  cleanup.sh  config.py  docker-compose.dev.yml  generate_requirements_file.sh  legal_chunker.py  legal_chunker_v0.py  main.py  nltk_setup.py  pdf_text_extractor.py  pdf_to_md.py  pinecone_service.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  run.py  sample_env  streamlit_app.py
app/ai_service/: __init__.py  agent_schema.py  base.py  doc_agent.py
app/app_logger/: ai_service_logger.py  exception_handlers.py  logger.py  middleware.py
app/paralegals/: __init__.py  tax.py  tax_paralegal_tools.py
app/paralegals/prompts/: __init__.py  information_retrieval.py  legal_paralegal.py  question_formulation.py  response_agent.py  tax_paralegal.py  user_proxy.py
docs/: income_tax_law.md  income_tax_law.txt
