[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "nltk >=3.8.1",
    "pypdf >=3.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.4.0",
    "black >=23.3.0",
]
