[build-system]
requires = ["uv>=0.6.7", "setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawgpt"
version = "0.1.0"
description = "LawGPT is a tool that uses LLMs to help you understand and analyze legal documents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Aman Bhashkar", email = "aman.da19@iiitmk.ac.in"},
]
dependencies = [
    # Core dependencies
    "fastapi>=0.115.8,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "python-dotenv>=1.0.1,<1.1.0",
    "pydantic>=2.10.6,<2.11.0",
    "sqlalchemy>=2.0.38,<2.1.0",
    
    # NLP/ML dependencies
    "nltk>=3.9.1,<3.10.0",
    "spacy>=3.8.4,<3.9.0",
    "transformers>=4.49.0,<4.50.0",
    "sentence-transformers>=3.4.1,<3.5.0",
    "torch>=2.6.0,<2.7.0",
    "scikit-learn>=1.6.1,<1.7.0",
    
    # PDF processing
    "pypdf>=3.17.0,<3.18.0",
    "pypdfium2>=4.30.1,<4.31.0",
    "pdfplumber>=0.11.5,<0.12.0",
    "pymupdf>=1.25.3,<1.26.0",
    
    # LLM ecosystem
    "langchain>=0.3.19,<0.4.0",
    "openai>=1.64.0,<1.65.0",
    "pinecone>=5.4.2,<5.5.0",
    "tiktoken>=0.9.0,<0.10.0",
    
    # Utilities
    "numpy>=1.26.4,<1.27.0",
    "pandas>=2.2.3,<2.3.0",
    "scipy>=1.15.2,<1.16.0",
    "requests>=2.32.3,<2.33.0",
    "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<8.4.0",
    "black>=23.3.0,<23.4.0",
    "mypy>=1.0.0",
    "types-requests>=2.32.0",
    "pytest-asyncio>=0.25.3,<0.26.0",
    "pytest-socket>=0.7.0,<0.8.0"
]

[tool.uv.pip]
index-url = "https://pypi.org/simple"
extra-index-url = [
    "https://download.pytorch.org/whl/cu123"
]
